k0gram.output
Terminals unused in grammar

    RESERVED
    DOUBLE_ARROW
    COLONCOLON
    DOUBLE_SEMICOLON
    SINGLE_QUOTE
    INTERFACE
    OVERRIDE


State 22 conflicts: 1 shift/reduce
State 57 conflicts: 6 shift/reduce
State 64 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 69 conflicts: 1 shift/reduce
State 70 conflicts: 4 shift/reduce
State 71 conflicts: 4 shift/reduce
State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 76 conflicts: 4 shift/reduce
State 77 conflicts: 3 shift/reduce
State 82 conflicts: 6 shift/reduce
State 174 conflicts: 1 shift/reduce
State 188 conflicts: 2 shift/reduce
State 206 conflicts: 1 shift/reduce
State 215 conflicts: 1 shift/reduce
State 237 conflicts: 1 shift/reduce
State 238 conflicts: 1 shift/reduce
State 239 conflicts: 1 shift/reduce
State 240 conflicts: 1 shift/reduce
State 241 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 280 conflicts: 1 shift/reduce
State 306 conflicts: 1 shift/reduce
State 307 conflicts: 1 shift/reduce
State 332 conflicts: 1 shift/reduce
State 336 conflicts: 1 shift/reduce
State 356 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: topLevelObjectList

    2 topLevelObjectList: topLevelObject
    3                   | topLevelObject SEMICOLON
    4                   | topLevelObjectList topLevelObject
    5                   | topLevelObjectList topLevelObject SEMICOLON

    6 topLevelObject: declaration
    7               | importList

    8 importList: IMPORT importIdentifier
    9           | IMPORT importIdentifier importList

   10 importIdentifier: IDENTIFIER DOT importIdentifier
   11                 | IDENTIFIER
   12                 | MULT

   13 declaration: functionDeclaration
   14            | propertyDeclaration
   15            | assignment

   16 propertyDeclaration: variable variableDeclaration
   17                    | variable IDENTIFIER ASSIGNMENT expression
   18                    | variable variableDeclaration ASSIGNMENT expression
   19                    | variable reciverType variableDeclaration
   20                    | variable reciverType variableDeclaration ASSIGNMENT expression
   21                    | variable typeParameters variableDeclaration
   22                    | variable typeParameters variableDeclaration ASSIGNMENT expression
   23                    | variable typeParameters reciverType variableDeclaration
   24                    | variable typeParameters reciverType variableDeclaration ASSIGNMENT expression
   25                    | arrayDeclaration

   26 arrayDeclaration: variable variableDeclaration arraySize arrayValues
   27                 | variable variableDeclaration arraySize
   28                 | variable variableDeclaration ASSIGNMENT IDENTIFIER LANGLE IDENTIFIER RANGLE arraySize arrayValues
   29                 | variable variableDeclaration ASSIGNMENT IDENTIFIER LANGLE IDENTIFIER RANGLE arraySize

   30 arraySize: LPAREN INTEGER_LITERAL RPAREN
   31          | LPAREN IDENTIFIER RPAREN

   32 arrayValues: LCURL expressionList RCURL

   33 variable: constantVal
   34         | VAL
   35         | VAR

   36 constantVal: CONST VAL

   37 typeParameters: LANGLE variableDeclarationList RANGLE

   38 functionDeclaration: FUN IDENTIFIER functionValueParameters COLON type functionBody
   39                    | FUN IDENTIFIER functionValueParameters COLON type SEMICOLON functionBody
   40                    | FUN IDENTIFIER functionValueParameters COLON type
   41                    | FUN IDENTIFIER functionValueParameters functionBody
   42                    | FUN IDENTIFIER functionValueParameters SEMICOLON functionBody
   43                    | FUN IDENTIFIER LPAREN RPAREN COLON type functionBody
   44                    | FUN IDENTIFIER LPAREN RPAREN COLON type SEMICOLON functionBody
   45                    | FUN IDENTIFIER LPAREN RPAREN COLON type
   46                    | FUN IDENTIFIER LPAREN RPAREN functionBody
   47                    | FUN IDENTIFIER LPAREN RPAREN SEMICOLON functionBody

   48 functionValueParameters: LPAREN functionValueParamList RPAREN

   49 functionValueParamList: functionValueParameter COMMA functionValueParamList
   50                       | functionValueParameter

   51 functionValueParameter: variableDeclaration
   52                       | variableDeclaration ASSIGNMENT expression

   53 type: primitiveType
   54     | functionType
   55     | userType

   56 primitiveType: BYTE
   57              | SHORT
   58              | INT
   59              | LONG
   60              | FLOAT
   61              | DOUBLE
   62              | BOOL
   63              | CHAR
   64              | STRING
   65              | NULL_K

   66 userType: simpleUserType
   67         | userType DOT simpleUserType

   68 simpleUserType: IDENTIFIER LANGLE typeArgumentsList RANGLE
   69               | IDENTIFIER

   70 typeArgumentsList: typeArgument
   71                  | typeArgument COMMA typeArgumentsList

   72 typeArgument: type
   73             | MULT

   74 reciverType: parenthesizedType_opt

   75 functionType: reciverType DOT functionTypeParameters ARROW type
   76             | functionTypeParameters ARROW type

   77 functionTypeParameters: LPAREN functionTypeParamList RPAREN
   78                       | LPAREN RPAREN

   79 functionTypeParamList: functionTypeParameter COMMA functionTypeParamList
   80                      | functionTypeParameter

   81 functionTypeParameter: variableDeclaration
   82                      | type

   83 parenthesizedType_opt: LPAREN type RPAREN quests
   84                      | LPAREN type RPAREN

   85 quests: quest
   86       | quest quests

   87 quest: QUEST_NO_WS
   88      | QUEST_WS

   89 functionBody: block
   90             | ASSIGNMENT expression

   91 block: LCURL RCURL
   92      | LCURL statements RCURL

   93 statements: statement SEMICOLON
   94           | statement SEMICOLON statements
   95           | SEMICOLON

   96 statement: declaration
   97          | loopStatement
   98          | expression

   99 assignment: IDENTIFIER ASSIGNMENT expression
  100           | IDENTIFIER ADD_ASSIGNMENT expression
  101           | IDENTIFIER SUB_ASSIGNMENT expression
  102           | arrayIndex ASSIGNMENT expression
  103           | arrayIndex ADD_ASSIGNMENT expression
  104           | arrayIndex SUB_ASSIGNMENT expression

  105 arrayIndex: IDENTIFIER LSQUARE INTEGER_LITERAL RSQUARE

  106 loopStatement: forStatement
  107              | whileStatement
  108              | doWhileStatement

  109 forStatement: FOR LPAREN variableDeclarations IN expression RPAREN controlStructureBody
  110             | FOR LPAREN IDENTIFIER IN expression RPAREN controlStructureBody
  111             | FOR LPAREN variableDeclarations IN expression RPAREN SEMICOLON controlStructureBody
  112             | FOR LPAREN IDENTIFIER IN expression RPAREN SEMICOLON controlStructureBody

  113 whileStatement: WHILE LPAREN expression RPAREN controlStructureBody
  114               | WHILE LPAREN expression RPAREN SEMICOLON
  115               | WHILE LPAREN expression RPAREN SEMICOLON controlStructureBody

  116 doWhileStatement: DO controlStructureBody WHILE LPAREN expression RPAREN
  117                 | DO controlStructureBody SEMICOLON WHILE LPAREN expression RPAREN

  118 variableDeclarations: variableDeclaration
  119                     | multiVariableDeclaration

  120 variableDeclaration: IDENTIFIER COLON type
  121                    | IDENTIFIER COLON type quests

  122 multiVariableDeclaration: LPAREN variableDeclarationList RPAREN

  123 variableDeclarationList: variableDeclaration
  124                        | variableDeclarationList COMMA variableDeclaration

  125 expression: disjunction

  126 disjunction: disjunction DISJ conjunction
  127            | conjunction

  128 conjunction: conjunction CONJ equality
  129            | equality

  130 equality: equality EQEQ comparison
  131         | equality EXCL_EQ comparison
  132         | equality EQEQEQ comparison
  133         | equality EXCL_EQEQ comparison
  134         | comparison

  135 comparison: comparison LANGLE infixOperation
  136           | comparison RANGLE infixOperation
  137           | comparison GE infixOperation
  138           | comparison LE infixOperation
  139           | infixOperation

  140 infixOperation: infixOperation IN elvisExpression
  141               | elvisExpression

  142 elvisExpression: elvisExpression QUEST_NO_WS COLON infixFunctionCall
  143                | infixFunctionCall

  144 infixFunctionCall: infixFunctionCall IDENTIFIER rangeExpression
  145                  | rangeExpression

  146 rangeExpression: additiveExpression RANGE rangeExpression
  147                | additiveExpression RANGE_UNTIL rangeExpression
  148                | additiveExpression

  149 additiveExpression: additiveExpression ADD multiplicativeExpression
  150                   | additiveExpression SUB multiplicativeExpression
  151                   | multiplicativeExpression

  152 multiplicativeExpression: multiplicativeExpression MULT prefixUnaryExpression
  153                         | multiplicativeExpression DIV prefixUnaryExpression
  154                         | multiplicativeExpression MOD prefixUnaryExpression
  155                         | prefixUnaryExpression

  156 prefixUnaryExpression: prefixUnaryOperator prefixUnaryExpression
  157                      | postfixExpression

  158 prefixUnaryOperator: INCR
  159                    | DECR
  160                    | SUB
  161                    | ADD
  162                    | excl

  163 excl: EXCL_NO_WS
  164     | EXCL_WS

  165 primaryExpression: parenthesizedExpression
  166                  | IDENTIFIER
  167                  | INTEGER_LITERAL
  168                  | HEX_LITERAL
  169                  | CHARACTER_LITERAL
  170                  | REAL_LITERAL
  171                  | TRUE
  172                  | FALSE
  173                  | NULL_K
  174                  | LINE_STRING
  175                  | MULTILINE_STRING
  176                  | ifExpression
  177                  | whenExpression
  178                  | jumpExpression
  179                  | IDENTIFIER LSQUARE expression RSQUARE

  180 postfixExpression: primaryExpression
  181                  | postfixExpression LPAREN expressionList RPAREN
  182                  | postfixExpression LPAREN RPAREN
  183                  | postfixExpression DOT IDENTIFIER
  184                  | postfixExpression DOT IDENTIFIER LPAREN expressionList RPAREN
  185                  | postfixExpression DOT IDENTIFIER LPAREN RPAREN
  186                  | postfixExpression QUEST_NO_WS DOT IDENTIFIER
  187                  | postfixExpression QUEST_NO_WS DOT IDENTIFIER LPAREN expressionList RPAREN
  188                  | postfixExpression QUEST_NO_WS DOT IDENTIFIER LPAREN RPAREN
  189                  | postfixExpression LSQUARE expression RSQUARE
  190                  | postfixExpression INCR
  191                  | postfixExpression DECR

  192 expressionList: expression COMMA expressionList
  193               | expression

  194 parenthesizedExpression: LPAREN expression RPAREN

  195 ifExpression: IF LPAREN expression RPAREN SEMICOLON
  196             | IF LPAREN expression RPAREN block
  197             | IF LPAREN expression RPAREN SEMICOLON block
  198             | IF LPAREN expression RPAREN block ELSE block
  199             | IF LPAREN expression RPAREN SEMICOLON block ELSE block
  200             | IF LPAREN expression RPAREN SEMICOLON block SEMICOLON ELSE block
  201             | IF LPAREN expression RPAREN SEMICOLON block SEMICOLON ELSE SEMICOLON block
  202             | IF LPAREN expression RPAREN block SEMICOLON ELSE block
  203             | IF LPAREN expression RPAREN block ELSE ifExpression
  204             | IF LPAREN expression RPAREN SEMICOLON block ELSE ifExpression
  205             | IF LPAREN expression RPAREN SEMICOLON block SEMICOLON ELSE ifExpression
  206             | IF LPAREN expression RPAREN block SEMICOLON ELSE ifExpression

  207 whenExpression: WHEN LCURL RCURL
  208               | WHEN LCURL whenEntries RCURL
  209               | WHEN whenSubject LCURL RCURL
  210               | WHEN whenSubject LCURL whenEntries RCURL

  211 whenSubject: LPAREN expression RPAREN
  212            | LPAREN VAL variableDeclaration ASSIGNMENT expression RPAREN

  213 whenEntries: whenEntry whenEntries
  214            | whenEntry

  215 whenEntry: whenConditionList ARROW controlStructureBody SEMICOLON
  216          | ELSE ARROW controlStructureBody SEMICOLON

  217 whenConditionList: whenCondition COMMA whenConditionList
  218                  | whenCondition

  219 whenCondition: expression
  220              | IN expression

  221 controlStructureBody: block
  222                     | statement SEMICOLON

  223 jumpExpression: RETURN
  224               | RETURN expression
  225               | CONTINUE
  226               | BREAK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    BYTE <treeptr> (258) 56
    SHORT <treeptr> (259) 57
    INT <treeptr> (260) 58
    LONG <treeptr> (261) 59
    FLOAT <treeptr> (262) 60
    DOUBLE <treeptr> (263) 61
    CHAR <treeptr> (264) 63
    STRING <treeptr> (265) 64
    BOOL <treeptr> (266) 62
    ASSIGNMENT <treeptr> (267) 17 18 20 22 24 28 29 52 90 99 102 212
    ADD_ASSIGNMENT <treeptr> (268) 100 103
    SUB_ASSIGNMENT <treeptr> (269) 101 104
    ADD <treeptr> (270) 149 161
    SUB <treeptr> (271) 150 160
    MULT <treeptr> (272) 12 73 152
    DIV <treeptr> (273) 153
    MOD <treeptr> (274) 154
    INCR <treeptr> (275) 158 190
    DECR <treeptr> (276) 159 191
    EQEQ <treeptr> (277) 130
    EXCL_EQ <treeptr> (278) 131
    LANGLE <treeptr> (279) 28 29 37 68 135
    RANGLE <treeptr> (280) 28 29 37 68 136
    LE <treeptr> (281) 138
    GE <treeptr> (282) 137
    EQEQEQ <treeptr> (283) 132
    EXCL_EQEQ <treeptr> (284) 133
    CONJ <treeptr> (285) 128
    DISJ <treeptr> (286) 126
    EXCL_NO_WS <treeptr> (287) 163
    EXCL_WS <treeptr> (288) 164
    QUEST_WS <treeptr> (289) 88
    QUEST_NO_WS <treeptr> (290) 87 142 186 187 188
    RANGE <treeptr> (291) 146
    RANGE_UNTIL <treeptr> (292) 147
    DOT <treeptr> (293) 10 67 75 183 184 185 186 187 188
    COMMA <treeptr> (294) 49 71 79 124 192 217
    LPAREN <treeptr> (295) 30 31 43 44 45 46 47 48 77 78 83 84 109 110 111 112 113 114 115 116 117 122 181 182 184 185 187 188 194 195 196 197 198 199 200 201 202 203 204 205 206 211 212
    RPAREN <treeptr> (296) 30 31 43 44 45 46 47 48 77 78 83 84 109 110 111 112 113 114 115 116 117 122 181 182 184 185 187 188 194 195 196 197 198 199 200 201 202 203 204 205 206 211 212
    LSQUARE <treeptr> (297) 105 179 189
    RSQUARE <treeptr> (298) 105 179 189
    LCURL <treeptr> (299) 32 91 92 207 208 209 210
    RCURL <treeptr> (300) 32 91 92 207 208 209 210
    COLON <treeptr> (301) 38 39 40 43 44 45 120 121 142
    SEMICOLON <treeptr> (302) 3 5 39 42 44 47 93 94 95 111 112 114 115 117 195 197 199 200 201 202 204 205 206 215 216 222
    RESERVED <treeptr> (303)
    ARROW <treeptr> (304) 75 76 215 216
    DOUBLE_ARROW <treeptr> (305)
    COLONCOLON <treeptr> (306)
    DOUBLE_SEMICOLON <treeptr> (307)
    SINGLE_QUOTE <treeptr> (308)
    BREAK <treeptr> (309) 226
    CONTINUE <treeptr> (310) 225
    DO <treeptr> (311) 116 117
    ELSE <treeptr> (312) 198 199 200 201 202 203 204 205 206 216
    FALSE <treeptr> (313) 172
    FOR <treeptr> (314) 109 110 111 112
    FUN <treeptr> (315) 38 39 40 41 42 43 44 45 46 47
    IF <treeptr> (316) 195 196 197 198 199 200 201 202 203 204 205 206
    IN <treeptr> (317) 109 110 111 112 140 220
    NULL_K <treeptr> (318) 65 173
    RETURN <treeptr> (319) 223 224
    TRUE <treeptr> (320) 171
    VAL <treeptr> (321) 34 36 212
    VAR <treeptr> (322) 35
    WHEN <treeptr> (323) 207 208 209 210
    WHILE <treeptr> (324) 113 114 115 116 117
    IMPORT <treeptr> (325) 8 9
    CONST <treeptr> (326) 36
    INTERFACE <treeptr> (327)
    OVERRIDE <treeptr> (328)
    INTEGER_LITERAL <treeptr> (329) 30 105 167
    HEX_LITERAL <treeptr> (330) 168
    REAL_LITERAL <treeptr> (331) 170
    CHARACTER_LITERAL <treeptr> (332) 169
    IDENTIFIER <treeptr> (333) 10 11 17 28 29 31 38 39 40 41 42 43 44 45 46 47 68 69 99 100 101 105 110 112 120 121 144 166 179 183 184 185 186 187 188
    LINE_STRING <treeptr> (334) 174
    MULTILINE_STRING <treeptr> (335) 175


Nonterminals, with rules where they appear

    $accept (81)
        on left: 0
    program <treeptr> (82)
        on left: 1
        on right: 0
    topLevelObjectList <treeptr> (83)
        on left: 2 3 4 5
        on right: 1 4 5
    topLevelObject <treeptr> (84)
        on left: 6 7
        on right: 2 3 4 5
    importList <treeptr> (85)
        on left: 8 9
        on right: 7 9
    importIdentifier <treeptr> (86)
        on left: 10 11 12
        on right: 8 9 10
    declaration <treeptr> (87)
        on left: 13 14 15
        on right: 6 96
    propertyDeclaration <treeptr> (88)
        on left: 16 17 18 19 20 21 22 23 24 25
        on right: 14
    arrayDeclaration <treeptr> (89)
        on left: 26 27 28 29
        on right: 25
    arraySize <treeptr> (90)
        on left: 30 31
        on right: 26 27 28 29
    arrayValues <treeptr> (91)
        on left: 32
        on right: 26 28
    variable <treeptr> (92)
        on left: 33 34 35
        on right: 16 17 18 19 20 21 22 23 24 26 27 28 29
    constantVal <treeptr> (93)
        on left: 36
        on right: 33
    typeParameters <treeptr> (94)
        on left: 37
        on right: 21 22 23 24
    functionDeclaration <treeptr> (95)
        on left: 38 39 40 41 42 43 44 45 46 47
        on right: 13
    functionValueParameters <treeptr> (96)
        on left: 48
        on right: 38 39 40 41 42
    functionValueParamList <treeptr> (97)
        on left: 49 50
        on right: 48 49
    functionValueParameter <treeptr> (98)
        on left: 51 52
        on right: 49 50
    type <treeptr> (99)
        on left: 53 54 55
        on right: 38 39 40 43 44 45 72 75 76 82 83 84 120 121
    primitiveType <treeptr> (100)
        on left: 56 57 58 59 60 61 62 63 64 65
        on right: 53
    userType <treeptr> (101)
        on left: 66 67
        on right: 55 67
    simpleUserType <treeptr> (102)
        on left: 68 69
        on right: 66 67
    typeArgumentsList <treeptr> (103)
        on left: 70 71
        on right: 68 71
    typeArgument <treeptr> (104)
        on left: 72 73
        on right: 70 71
    reciverType <treeptr> (105)
        on left: 74
        on right: 19 20 23 24 75
    functionType <treeptr> (106)
        on left: 75 76
        on right: 54
    functionTypeParameters <treeptr> (107)
        on left: 77 78
        on right: 75 76
    functionTypeParamList <treeptr> (108)
        on left: 79 80
        on right: 77 79
    functionTypeParameter <treeptr> (109)
        on left: 81 82
        on right: 79 80
    parenthesizedType_opt <treeptr> (110)
        on left: 83 84
        on right: 74
    quests <treeptr> (111)
        on left: 85 86
        on right: 83 86 121
    quest <treeptr> (112)
        on left: 87 88
        on right: 85 86
    functionBody <treeptr> (113)
        on left: 89 90
        on right: 38 39 41 42 43 44 46 47
    block <treeptr> (114)
        on left: 91 92
        on right: 89 196 197 198 199 200 201 202 203 204 205 206 221
    statements <treeptr> (115)
        on left: 93 94 95
        on right: 92 94
    statement <treeptr> (116)
        on left: 96 97 98
        on right: 93 94 222
    assignment <treeptr> (117)
        on left: 99 100 101 102 103 104
        on right: 15
    arrayIndex <treeptr> (118)
        on left: 105
        on right: 102 103 104
    loopStatement <treeptr> (119)
        on left: 106 107 108
        on right: 97
    forStatement <treeptr> (120)
        on left: 109 110 111 112
        on right: 106
    whileStatement <treeptr> (121)
        on left: 113 114 115
        on right: 107
    doWhileStatement <treeptr> (122)
        on left: 116 117
        on right: 108
    variableDeclarations <treeptr> (123)
        on left: 118 119
        on right: 109 111
    variableDeclaration <treeptr> (124)
        on left: 120 121
        on right: 16 18 19 20 21 22 23 24 26 27 28 29 51 52 81 118 123 124 212
    multiVariableDeclaration <treeptr> (125)
        on left: 122
        on right: 119
    variableDeclarationList <treeptr> (126)
        on left: 123 124
        on right: 37 122 124
    expression <treeptr> (127)
        on left: 125
        on right: 17 18 20 22 24 52 90 98 99 100 101 102 103 104 109 110 111 112 113 114 115 116 117 179 189 192 193 194 195 196 197 198 199 200 201 202 203 204 205 206 211 212 219 220 224
    disjunction <treeptr> (128)
        on left: 126 127
        on right: 125 126
    conjunction <treeptr> (129)
        on left: 128 129
        on right: 126 127 128
    equality <treeptr> (130)
        on left: 130 131 132 133 134
        on right: 128 129 130 131 132 133
    comparison <treeptr> (131)
        on left: 135 136 137 138 139
        on right: 130 131 132 133 134 135 136 137 138
    infixOperation <treeptr> (132)
        on left: 140 141
        on right: 135 136 137 138 139 140
    elvisExpression <treeptr> (133)
        on left: 142 143
        on right: 140 141 142
    infixFunctionCall <treeptr> (134)
        on left: 144 145
        on right: 142 143 144
    rangeExpression <treeptr> (135)
        on left: 146 147 148
        on right: 144 145 146 147
    additiveExpression <treeptr> (136)
        on left: 149 150 151
        on right: 146 147 148 149 150
    multiplicativeExpression <treeptr> (137)
        on left: 152 153 154 155
        on right: 149 150 151 152 153 154
    prefixUnaryExpression <treeptr> (138)
        on left: 156 157
        on right: 152 153 154 155 156
    prefixUnaryOperator <treeptr> (139)
        on left: 158 159 160 161 162
        on right: 156
    excl <treeptr> (140)
        on left: 163 164
        on right: 162
    primaryExpression <treeptr> (141)
        on left: 165 166 167 168 169 170 171 172 173 174 175 176 177 178 179
        on right: 180
    postfixExpression <treeptr> (142)
        on left: 180 181 182 183 184 185 186 187 188 189 190 191
        on right: 157 181 182 183 184 185 186 187 188 189 190 191
    expressionList <treeptr> (143)
        on left: 192 193
        on right: 32 181 184 187 192
    parenthesizedExpression <treeptr> (144)
        on left: 194
        on right: 165
    ifExpression <treeptr> (145)
        on left: 195 196 197 198 199 200 201 202 203 204 205 206
        on right: 176 203 204 205 206
    whenExpression <treeptr> (146)
        on left: 207 208 209 210
        on right: 177
    whenSubject <treeptr> (147)
        on left: 211 212
        on right: 209 210
    whenEntries <treeptr> (148)
        on left: 213 214
        on right: 208 210 213
    whenEntry <treeptr> (149)
        on left: 215 216
        on right: 213 214
    whenConditionList <treeptr> (150)
        on left: 217 218
        on right: 215 217
    whenCondition <treeptr> (151)
        on left: 219 220
        on right: 217 218
    controlStructureBody <treeptr> (152)
        on left: 221 222
        on right: 109 110 111 112 113 115 116 117 215 216
    jumpExpression <treeptr> (153)
        on left: 223 224 225 226
        on right: 178


State 0

    0 $accept: • program $end

    FUN         shift, and go to state 1
    VAL         shift, and go to state 2
    VAR         shift, and go to state 3
    IMPORT      shift, and go to state 4
    CONST       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6

    program              go to state 7
    topLevelObjectList   go to state 8
    topLevelObject       go to state 9
    importList           go to state 10
    declaration          go to state 11
    propertyDeclaration  go to state 12
    arrayDeclaration     go to state 13
    variable             go to state 14
    constantVal          go to state 15
    functionDeclaration  go to state 16
    assignment           go to state 17
    arrayIndex           go to state 18


State 1

   38 functionDeclaration: FUN • IDENTIFIER functionValueParameters COLON type functionBody
   39                    | FUN • IDENTIFIER functionValueParameters COLON type SEMICOLON functionBody
   40                    | FUN • IDENTIFIER functionValueParameters COLON type
   41                    | FUN • IDENTIFIER functionValueParameters functionBody
   42                    | FUN • IDENTIFIER functionValueParameters SEMICOLON functionBody
   43                    | FUN • IDENTIFIER LPAREN RPAREN COLON type functionBody
   44                    | FUN • IDENTIFIER LPAREN RPAREN COLON type SEMICOLON functionBody
   45                    | FUN • IDENTIFIER LPAREN RPAREN COLON type
   46                    | FUN • IDENTIFIER LPAREN RPAREN functionBody
   47                    | FUN • IDENTIFIER LPAREN RPAREN SEMICOLON functionBody

    IDENTIFIER  shift, and go to state 19


State 2

   34 variable: VAL •

    $default  reduce using rule 34 (variable)


State 3

   35 variable: VAR •

    $default  reduce using rule 35 (variable)


State 4

    8 importList: IMPORT • importIdentifier
    9           | IMPORT • importIdentifier importList

    MULT        shift, and go to state 20
    IDENTIFIER  shift, and go to state 21

    importIdentifier  go to state 22


State 5

   36 constantVal: CONST • VAL

    VAL  shift, and go to state 23


State 6

   99 assignment: IDENTIFIER • ASSIGNMENT expression
  100           | IDENTIFIER • ADD_ASSIGNMENT expression
  101           | IDENTIFIER • SUB_ASSIGNMENT expression
  105 arrayIndex: IDENTIFIER • LSQUARE INTEGER_LITERAL RSQUARE

    ASSIGNMENT      shift, and go to state 24
    ADD_ASSIGNMENT  shift, and go to state 25
    SUB_ASSIGNMENT  shift, and go to state 26
    LSQUARE         shift, and go to state 27


State 7

    0 $accept: program • $end

    $end  shift, and go to state 28


State 8

    1 program: topLevelObjectList •
    4 topLevelObjectList: topLevelObjectList • topLevelObject
    5                   | topLevelObjectList • topLevelObject SEMICOLON

    FUN         shift, and go to state 1
    VAL         shift, and go to state 2
    VAR         shift, and go to state 3
    IMPORT      shift, and go to state 4
    CONST       shift, and go to state 5
    IDENTIFIER  shift, and go to state 6

    $default  reduce using rule 1 (program)

    topLevelObject       go to state 29
    importList           go to state 10
    declaration          go to state 11
    propertyDeclaration  go to state 12
    arrayDeclaration     go to state 13
    variable             go to state 14
    constantVal          go to state 15
    functionDeclaration  go to state 16
    assignment           go to state 17
    arrayIndex           go to state 18


State 9

    2 topLevelObjectList: topLevelObject •
    3                   | topLevelObject • SEMICOLON

    SEMICOLON  shift, and go to state 30

    $default  reduce using rule 2 (topLevelObjectList)


State 10

    7 topLevelObject: importList •

    $default  reduce using rule 7 (topLevelObject)


State 11

    6 topLevelObject: declaration •

    $default  reduce using rule 6 (topLevelObject)


State 12

   14 declaration: propertyDeclaration •

    $default  reduce using rule 14 (declaration)


State 13

   25 propertyDeclaration: arrayDeclaration •

    $default  reduce using rule 25 (propertyDeclaration)


State 14

   16 propertyDeclaration: variable • variableDeclaration
   17                    | variable • IDENTIFIER ASSIGNMENT expression
   18                    | variable • variableDeclaration ASSIGNMENT expression
   19                    | variable • reciverType variableDeclaration
   20                    | variable • reciverType variableDeclaration ASSIGNMENT expression
   21                    | variable • typeParameters variableDeclaration
   22                    | variable • typeParameters variableDeclaration ASSIGNMENT expression
   23                    | variable • typeParameters reciverType variableDeclaration
   24                    | variable • typeParameters reciverType variableDeclaration ASSIGNMENT expression
   26 arrayDeclaration: variable • variableDeclaration arraySize arrayValues
   27                 | variable • variableDeclaration arraySize
   28                 | variable • variableDeclaration ASSIGNMENT IDENTIFIER LANGLE IDENTIFIER RANGLE arraySize arrayValues
   29                 | variable • variableDeclaration ASSIGNMENT IDENTIFIER LANGLE IDENTIFIER RANGLE arraySize

    LANGLE      shift, and go to state 31
    LPAREN      shift, and go to state 32
    IDENTIFIER  shift, and go to state 33

    typeParameters         go to state 34
    reciverType            go to state 35
    parenthesizedType_opt  go to state 36
    variableDeclaration    go to state 37


State 15

   33 variable: constantVal •

    $default  reduce using rule 33 (variable)


State 16

   13 declaration: functionDeclaration •

    $default  reduce using rule 13 (declaration)


State 17

   15 declaration: assignment •

    $default  reduce using rule 15 (declaration)


State 18

  102 assignment: arrayIndex • ASSIGNMENT expression
  103           | arrayIndex • ADD_ASSIGNMENT expression
  104           | arrayIndex • SUB_ASSIGNMENT expression

    ASSIGNMENT      shift, and go to state 38
    ADD_ASSIGNMENT  shift, and go to state 39
    SUB_ASSIGNMENT  shift, and go to state 40


State 19

   38 functionDeclaration: FUN IDENTIFIER • functionValueParameters COLON type functionBody
   39                    | FUN IDENTIFIER • functionValueParameters COLON type SEMICOLON functionBody
   40                    | FUN IDENTIFIER • functionValueParameters COLON type
   41                    | FUN IDENTIFIER • functionValueParameters functionBody
   42                    | FUN IDENTIFIER • functionValueParameters SEMICOLON functionBody
   43                    | FUN IDENTIFIER • LPAREN RPAREN COLON type functionBody
   44                    | FUN IDENTIFIER • LPAREN RPAREN COLON type SEMICOLON functionBody
   45                    | FUN IDENTIFIER • LPAREN RPAREN COLON type
   46                    | FUN IDENTIFIER • LPAREN RPAREN functionBody
   47                    | FUN IDENTIFIER • LPAREN RPAREN SEMICOLON functionBody

    LPAREN  shift, and go to state 41

    functionValueParameters  go to state 42


State 20

   12 importIdentifier: MULT •

    $default  reduce using rule 12 (importIdentifier)


State 21

   10 importIdentifier: IDENTIFIER • DOT importIdentifier
   11                 | IDENTIFIER •

    DOT  shift, and go to state 43

    $default  reduce using rule 11 (importIdentifier)


State 22

    8 importList: IMPORT importIdentifier •
    9           | IMPORT importIdentifier • importList

    IMPORT  shift, and go to state 4

    IMPORT    [reduce using rule 8 (importList)]
    $default  reduce using rule 8 (importList)

    importList  go to state 44


State 23

   36 constantVal: CONST VAL •

    $default  reduce using rule 36 (constantVal)


State 24

   99 assignment: IDENTIFIER ASSIGNMENT • expression

    ADD                shift, and go to state 45
    SUB                shift, and go to state 46
    INCR               shift, and go to state 47
    DECR               shift, and go to state 48
    EXCL_NO_WS         shift, and go to state 49
    EXCL_WS            shift, and go to state 50
    LPAREN             shift, and go to state 51
    BREAK              shift, and go to state 52
    CONTINUE           shift, and go to state 53
    FALSE              shift, and go to state 54
    IF                 shift, and go to state 55
    NULL_K             shift, and go to state 56
    RETURN             shift, and go to state 57
    TRUE               shift, and go to state 58
    WHEN               shift, and go to state 59
    INTEGER_LITERAL    shift, and go to state 60
    HEX_LITERAL        shift, and go to state 61
    REAL_LITERAL       shift, and go to state 62
    CHARACTER_LITERAL  shift, and go to state 63
    IDENTIFIER         shift, and go to state 64
    LINE_STRING        shift, and go to state 65
    MULTILINE_STRING   shift, and go to state 66

    expression                go to state 67
    disjunction               go to state 68
    conjunction               go to state 69
    equality                  go to state 70
    comparison                go to state 71
    infixOperation            go to state 72
    elvisExpression           go to state 73
    infixFunctionCall         go to state 74
    rangeExpression           go to state 75
    additiveExpression        go to state 76
    multiplicativeExpression  go to state 77
    prefixUnaryExpression     go to state 78
    prefixUnaryOperator       go to state 79
    excl                      go to state 80
    primaryExpression         go to state 81
    postfixExpression         go to state 82
    parenthesizedExpression   go to state 83
    ifExpression              go to state 84
    whenExpression            go to state 85
    jumpExpression            go to state 86


State 25

  100 assignment: IDENTIFIER ADD_ASSIGNMENT • expression

    ADD                shift, and go to state 45
    SUB                shift, and go to state 46
    INCR               shift, and go to state 47
    DECR               shift, and go to state 48
    EXCL_NO_WS         shift, and go to state 49
    EXCL_WS            shift, and go to state 50
    LPAREN             shift, and go to state 51
    BREAK              shift, and go to state 52
    CONTINUE           shift, and go to state 53
    FALSE              shift, and go to state 54
    IF                 shift, and go to state 55
    NULL_K             shift, and go to state 56
    RETURN             shift, and go to state 57
    TRUE               shift, and go to state 58
    WHEN               shift, and go to state 59
    INTEGER_LITERAL    shift, and go to state 60
    HEX_LITERAL        shift, and go to state 61
    REAL_LITERAL       shift, and go to state 62
    CHARACTER_LITERAL  shift, and go to state 63
    IDENTIFIER         shift, and go to state 64
    LINE_STRING        shift, and go to state 65
    MULTILINE_STRING   shift, and go to state 66

    expression                go to state 87
    disjunction               go to state 68
    conjunction               go to state 69
    equality                  go to state 70
    comparison                go to state 71
    infixOperation            go to state 72
    elvisExpression           go to state 73
    infixFunctionCall         go to state 74
    rangeExpression           go to state 75
    additiveExpression        go to state 76
    multiplicativeExpression  go to state 77
    prefixUnaryExpression     go to state 78
    prefixUnaryOperator       go to state 79
    excl                      go to state 80
    primaryExpression         go to state 81
    postfixExpression         go to state 82
    parenthesizedExpression   go to state 83
    ifExpression              go to state 84
    whenExpression            go to state 85
    jumpExpression            go to state 86


State 26

  101 assignment: IDENTIFIER SUB_ASSIGNMENT • expression
